content updated & breadcrumb added

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -67,12 +67,12 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../packages/party-packages/face-painting/">Face Painting and Temporary
+                                <li><a class="dropdown-item" href="../packages/party-packages/face-painting-hire/">Face Painting and Temporary
                                         Tatto</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../packages/party-packages/balloon-sculpting/">Balloon Sculpting</a></li>
+                                <li><a class="dropdown-item" href="../packages/party-packages/balloon-twisting/">Balloon Twisting</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -80,7 +80,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../packages/party-packages/mascot-package/">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="../packages/party-packages/mascot-hire/">Mascot Package</a></li>
                             </ul>
                         </div>
                     </li>
@@ -97,7 +97,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../packages/character-packages/fairy-package/">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="../packages/character-packages/fairy-party-hire/">Fairy Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -155,7 +155,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../packages/corporate-packages/jumping-castle/">Jumping Castle</a></li>
+                                <li><a class="dropdown-item" href="../packages/corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
                             </ul>
                         </div>
                     </li>
