--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="Kids Dream Entertainment is a Sydney, Australia based kids entertainment service provider providing services in Sydney, Perramatta and Blacktown">
+        content="Kids Dream Entertainment is a professional kids party entertainer in Sydney. we entertain the kids at all kinds of parties or events.">
     <meta name="keywords"
-        content="kidsdream, Australia kids entertainment, Sydney kids entertainment, kids entertainment" />
-    <title>Kids Dream Entertainment</title>
+        content="kidsdream, Australia kids entertainment, Sydney kids entertainment, kids entertainment, Kids party entertainer" />
+    <title>Professional Kids Party Entertainer Hire in Sydney | Kids Dream</title>
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
@@ -89,13 +89,13 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./packages/party-packages/face-painting/">Face
+                                <li><a class="dropdown-item" href="./packages/party-packages/face-painting-hire/">Face
                                         Painting and Temporary
                                         Tatto</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./packages/party-packages/balloon-sculpting/">Balloon
+                                <li><a class="dropdown-item" href="./packages/party-packages/balloon-twisting/">Balloon
                                         Sculpting</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
@@ -105,7 +105,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./packages/party-packages/mascot-package/">Mascot
+                                <li><a class="dropdown-item" href="./packages/party-packages/mascot-hire/">Mascot
                                         Package</a></li>
                             </ul>
                         </div>
@@ -124,7 +124,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./packages/character-packages/fairy-package/">Fairy
+                                <li><a class="dropdown-item" href="./packages/character-packages/fairy-party-hire/">Fairy
                                         Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
@@ -196,7 +196,7 @@
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li><a class="dropdown-item"
-                                        href="./packages/corporate-packages/jumping-castle/">Jumping Castle</a></li>
+                                        href="./packages/corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
                             </ul>
                         </div>
                     </li>
@@ -256,16 +256,10 @@
     <section>
 
         <div class="container">
-            <h2 class="text-center section-heading">Kids Dream brought you the best kids party entertainment service
+            <h2 class="text-center section-heading">Hire Kids party entertainer in Sydney
             </h2>
-            <p>We are a professional and reliable kids party entertainment service provider based in Sydney, catering to
-                a wide range of events including children parties, community events, corporate events, and sports
-                events. Our goal is to create unforgettable memories for your child and make your party or event a huge
-                success.</p>
-            <p>At Kids Dream Entertainment, we understand the importance of a memorable and enjoyable party experience.
-                That's why our team of professional entertainers is dedicated to providing top-notch entertainment that
-                will leave both children and adults amazed. With years of experience and a passion for what we do, our
-                entertainers have brought joy and laughter to over 1000 parties and events in Sydney.</p>
+            <p>We are a professional and reliable kids party entertainment service provider based in Sydney, catering to a wide range of events including children parties, community events, corporate events, and sports events. Our goal is to create unforgettable memories for your child and make your party or event a huge success.</p>
+            <p>At Kids Dream Entertainment, we understand the importance of a memorable and enjoyable party experience. That's why our team of professional entertainers is dedicated to providing top-notch entertainment that will leave both children and adults amazed. With years of experience and a passion for what we do, our kids party entertainer have brought joy and laughter to over 1000 parties and events in Sydney.</p>
         </div>
     </section>
 
@@ -287,13 +281,13 @@
                                     </a>
                                 </h4>
                                 <p class="text-center card-text">
-                                    <a class="text-white" href="./packages/party-packages/face-painting/">
+                                    <a class="text-white" href="./packages/party-packages/face-painting-hire/">
                                         Face Painting & Temporary Tattoo
                                     </a> <br>
-                                    <a class="text-white" href="./packages/party-packages/balloon-sculpting/">
-                                        Balloon Sculpting
+                                    <a class="text-white" href="./packages/party-packages/balloon-twisting/">
+                                        Balloon Twisting
                                     </a> <br>
-                                    <a class="text-white" href="./packages/party-packages/mascot-package/">
+                                    <a class="text-white" href="./packages/party-packages/mascot-hire/">
                                         Mascot Package
                                     </a> <br>
                                     <a class="text-white" href="./packages/party-packages/henna-tattoo/">
@@ -314,7 +308,7 @@
                                     </a>
                                 </h4><br>
                                 <p class="text-center mx-2 card-text">
-                                    <a class="text-white" href="./packages/character-packages/fairy-package/">
+                                    <a class="text-white" href="./packages/character-packages/fairy-party-hire/">
                                         Fairy Package
                                     </a> <br>
                                     <a class="text-white" href="./packages/character-packages/princess-package/">
@@ -360,7 +354,7 @@
                                     </a>
                                 </h4><br>
                                 <p class="text-center mx-2 card-text">
-                                    <a class="text-white" href="./packages/corporate-packages/jumping-castle/">
+                                    <a class="text-white" href="./packages/corporate-packages/jumping-castle-hire/">
                                         Jumping Castle
                                     </a> <br>
                                     <a class="text-white" href="./packages/corporate-packages/xmas-events/">
@@ -378,22 +372,11 @@
         </div>
 
         <div class="container">
-            <h2 class="text-center section-heading">Our Professional Entertainer
+            <h2 class="text-center section-heading">Our Professional kids party Entertainer
             </h2>
-            <p>Our entertainers are not only skilled and talented but also friendly and funny. They know how to engage
-                with children and ensure that everyone is included, making sure no one misses out on the fun. We
-                carefully select our entertainers based on their creative abilities and artistic skills, ensuring they
-                can successfully connect with your children and guests. Plus, they possess arts qualifications, adding
-                an extra touch of creativity to their performances.</p>
-            <p>At Kids Dream Entertainment, we offer a wide range of entertainment options to suit your party or event
-                needs. Whether you're looking for interactive games, face painting, balloon twisting, magic shows, or
-                character appearances, we have it all. You can browse through our packages to find the perfect fit for
-                your celebration or simply give us a call at 1300 976 750. Our friendly team will be more than happy to
-                assist you in designing a personalized package that matches your specific requirements.</p>
-            <p>So, if you want to create a friendly, safe, and fun atmosphere for your child's party or event, Kids
-                Dream Entertainment is here to help. Let us take care of the entertainment while you sit back and enjoy
-                a hassle-free experience. Contact us today and let's make your next kids party in Sydney an
-                unforgettable celebration!</p>
+            <p>Our kids party entertainers are not only skilled and talented but also friendly and funny. They know how to engage with children and ensure that everyone is included, making sure no one misses out on the fun. We carefully select our kids party entertainers based on their creative abilities and artistic skills, ensuring they can successfully connect with your children and guests. Plus, they possess arts qualifications, adding an extra touch of creativity to their performances.</p>
+            <p>At Kids Dream Entertainment, we offer a wide range of entertainment options to suit your party or event needs. Whether you're looking for interactive games, face painting, balloon twisting, magic shows, or character appearances, we have it all. You can browse through our packages to find the perfect fit for your celebration or simply give us a call at 1300 976 750. Our friendly team will be more than happy to assist you in designing a personalized package that matches your specific requirements.</p>
+            <p>So, if you want to create a friendly, safe, and fun atmosphere for your child's party or event, Kids Dream Entertainment is here to help. Let us take care of the entertainment while you sit back and enjoy a hassle-free experience. Contact us today and let's make your next kids party in Sydney an unforgettable celebration!</p>
         </div>
 
         <div id="desktop-slider" class="conttainer">
