--- a/packages/character-packages/index.html
+++ b/packages/character-packages/index.html
@@ -12,7 +12,9 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Character Packages - Kids Dream Entertainment</title>
+    <meta name="keywords" content="party characters">
+    <meta name="description" content="Your party or event will be attractive when You hire your kids favorite party characters. Kids Dream has many different characters that children like">
+    <title>Hire Kids Party Characters for Children | Kids Dream</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="shortcut icon" href="/img/kids-dream-logo.png" type="image/png">
@@ -22,7 +24,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="canonical" href="https://kidsdream.com.au/packages/character-packages/">    
+    <!-- <link rel="canonical" href="https://kidsdream.com.au/packages/character-packages/">     -->
+    <link rel="canonical" href="https://kidsdream.com.au/party-characters/">
     <link rel="stylesheet" href="../../css/style.css">
 </head>
 
@@ -67,12 +70,12 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../party-packages/face-painting/">Face Painting and Temporary
+                                <li><a class="dropdown-item" href="../party-packages/face-painting-hire/">Face Painting and Temporary
                                         Tatto</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../party-packages/balloon-sculpting/">Balloon Sculpting</a></li>
+                                <li><a class="dropdown-item" href="../party-packages/balloon-twisting/">Balloon Twisting</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -80,7 +83,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../party-packages/mascot-package/">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="../party-packages/mascot-hire/">Mascot Package</a></li>
                             </ul>
                         </div>
                     </li>
@@ -97,7 +100,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./fairy-package/">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="./fairy-party-hire/">Fairy Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -155,7 +158,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../corporate-packages/jumping-castle/">Jumping Castle</a></li>
+                                <li><a class="dropdown-item" href="../corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
                             </ul>
                         </div>
                     </li>
@@ -190,7 +193,22 @@
 
     <div class="page-title-background d-flex justify-content-center align-items-center"
         style="background: url('../../img/topbanner.png');">
-        <h1 class="page-title"><br>Character Packages</h1>
+        <h1 class="page-title"><br>Hire Party Characters to Add Magic to Your Event</h1>
+    </div>
+    <div class="container">
+        <p class="pt-5" style="text-align: justify;">
+            We offer a wide selection of party characters that children absolutely adore. When you hire our party characters, you can guarantee that your party or event will be a hit!</p>
+        <p>
+            Our team at Kids Dream Entertainment understands the importance of making your child's dreams come true. That's why we provide a range of popular party characters that children love, including superheroes, princesses, cartoon characters, and much more. When you hire one of our party characters, you can expect them to arrive fully prepared to keep the children entertained throughout the entire event.
+        </p>
+        <p>
+            At Kids Dream Entertainment, we go above and beyond to ensure that our character parties are filled with fun and excitement. Our professional entertainers are experts at engaging with children and creating an atmosphere that is both entertaining and memorable. From themed party games and character role-playing to music, dancing, and interactive entertainment, our party characters know how to keep the kids engaged and entertained from start to finish.
+        </p>
+        <p>
+            No matter the age group of the children at your party, our character parties are suitable for all. We tailor our entertainment activities to suit different age groups, ensuring that every child has a fantastic time. Whether it's a birthday party, a community event, a corporate gathering, or any other special occasion, our party characters will bring the magic and joy that will leave a lasting impression on everyone in attendance.</p>
+        <p>
+            So, when it comes to hiring party characters that will captivate the imaginations of children, Kids Dream Entertainment is the ultimate choice. Make your child's dreams come true by hiring their favorite party character from our talented team of entertainers. Contact us today to discuss your party or event requirements and let us bring the magic to your next celebration!
+        </p>
     </div>
     <div class="container main-body">
         <div class="row">
@@ -240,7 +258,7 @@
                 <div class="card">
                     <div class="row">
                         <div class="col-md-4">
-                            <a href="./fairy-package/">
+                            <a href="./fairy-party-hire/">
                                 <div class="img-card">
                                     <img src="../../img/fairy.png" alt="kidsdream-fairy-Package-img">
                                     <div class="img-title">Fairy Package</div>
