--- a/packages/character-packages/magician-package/index.html
+++ b/packages/character-packages/magician-package/index.html
@@ -67,12 +67,12 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../../party-packages/face-painting/">Face Painting and Temporary
+                                <li><a class="dropdown-item" href="../../party-packages/face-painting-hire/">Face Painting and Temporary
                                         Tatto</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../../party-packages/balloon-sculpting/">Balloon Sculpting</a></li>
+                                <li><a class="dropdown-item" href="../../party-packages/balloon-twisting/">Balloon Twisting</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -80,7 +80,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../../party-packages/mascot-package/">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="../../party-packages/mascot-hire/">Mascot Package</a></li>
                             </ul>
                         </div>
                     </li>
@@ -97,7 +97,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../fairy-package/">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="../fairy-party-hire/">Fairy Package</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -188,9 +188,15 @@
         </div>
     </nav>
 
-    <div class="page-title-background d-flex justify-content-center align-items-center"
+    <div class="page-title-background d-flex justify-content-center align-items-center flex-column"
         style="background: url('../../../img/topbanner.png');">
-        <h1 class="page-title"><br> Packages</h1>
+        <h1 class="text-center text-white text-uppercase">Magician Package</h1>
+        <div style="--bs-breadcrumb-divider: '>'; color: #fff;" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a class="text-white" href="../../../">Home</a></li>
+              <li class="breadcrumb-item active text-white" aria-current="page">Magician Package</li>
+            </ol>
+        </div>
     </div>
     <div class="container main-body">
         <div class="row">
@@ -218,16 +224,16 @@
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                             <ul>
-                                <li><a href="../../party-packages/face-painting/">Face Painting & Temporary Tattoo</a></li>
-                                <li><a href="../../party-packages/balloon-sculpting/">Balloon Sculpting</a></li>
+                                <li><a href="../../party-packages/face-painting-hire/">Face Painting & Temporary Tattoo</a></li>
+                                <li><a href="../../party-packages/balloon-twisting/">Balloon Twisting</a></li>
                                 <li><a href="../../party-packages/henna-tattoo/">Hanna Tattoo</a></li>
-                                <li><a href="../../party-packages/mascot-package/">Mascot Package</a></li>
+                                <li><a href="../../party-packages/mascot-hire/">Mascot Package</a></li>
                             </ul>
                         </div>
                         <div class="tab-pane fade show active" id="pills-profile" role="tabpanel"
                             aria-labelledby="pills-profile-tab">
                             <ul>
-                                <li><a href="../fairy-package/">Fairy Package</a></li>
+                                <li><a href="../fairy-party-hire/">Fairy Package</a></li>
                                 <li><a href="../princess-package/">Princess Package</a></li>
                                 <li><a href="../pirate-package/">Pirate Package</a></li>
                                 <li><a href="../elsa-or-enna/">Elsa or Anna</a></li>
@@ -243,7 +249,7 @@
                             <ul>
                                 <li><a href="../../corporate-packages/sports-events/">Sports Events</a></li>
                                 <li><a href="../../corporate-packages/xmas-events/">Xmas Events</a></li>
-                                <li><a href="../../corporate-packages/jumping-castle/">Jumping Castle</a></li>
+                                <li><a href="../../corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
                             </ul>
                         </div>
                     </div>
@@ -252,8 +258,6 @@
             </div>
             <div class="col-lg-9 col-sm-12" id="row-2">
                 <div class="card">
-                    <h2 class="text-center text-card">Magician Package</h2>
-                    <br>
                     <div class="row">
                         <div class="col-md-8" id="row-1">
                             <p class="text-card">
@@ -261,7 +265,7 @@
                                 Our magician package will surely
                                 take your children by a surprise and will give them a delightful memory.<br>
                                 This package includes Kids magic tricks,
-                                Magical Balloon sculpting and
+                                Magical Balloon Twisting and
                                 Musical games.<br>
                                 To get more details on this package, inbox us.
                             </p>
@@ -364,7 +368,7 @@
                 </a>
             </div>
             <div class="col-md-3">
-                <a href="../fairy-package/">
+                <a href="../fairy-party-hire/">
                     <div class="img-card">
                         <img src="../../../img/fairy.png" alt="kidsdream-fairy-Package-img">
                         <div class="img-title">Fairy Package</div>
