--- a/packages/character-packages/superhero-package/index.html
+++ b/packages/character-packages/superhero-package/index.html
@@ -147,15 +147,15 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../../corporate-packages/sports_events.html">Sports Events</a></li>
+                                <li><a class="dropdown-item" href="../../corporate-packages/sports-events/">Sports Events</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../../corporate-packages/xmas_events.html">Christmas Events</a></li>
+                                <li><a class="dropdown-item" href="../../corporate-packages/xmas-events/">Christmas Events</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../../corporate-packages/jumping_castle.html">Jumping Castle</a></li>
+                                <li><a class="dropdown-item" href="../../corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
                             </ul>
                         </div>
                     </li>
@@ -191,7 +191,7 @@
     <div class="page-title-background d-flex justify-content-center align-items-center flex-column"
         style="background: url('../../../img/topbanner.png');">
         <h1 class="text-center text-white text-uppercase">Superhero Package</h1>
-        <div style="--bs-breadcrumb-divider: '>'; color: #fff;" aria-label="breadcrumb">
+        <div class="breadcrumb-style" aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a class="text-white" href="../../../">Home</a></li>
               <li class="breadcrumb-item active text-white" aria-current="page">Superhero Package</li>
