--- a/packages/corporate-packages/jumping-castle-hire/index.html
+++ b/packages/corporate-packages/jumping-castle-hire/index.html
@@ -228,7 +228,7 @@
     <div class="page-title-background d-flex justify-content-center align-items-center flex-column"
         style="background: url('../../../img/topbanner.png');">
         <h1 class="text-center text-white text-uppercase">Jumping Castle Hire Sydney</h1>
-        <div style="--bs-breadcrumb-divider: '>'; color: #fff;" aria-label="breadcrumb">
+        <div class="breadcrumb-style" aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a class="text-white" href="../../../">Home</a></li>
               <li class="breadcrumb-item active text-white" aria-current="page">Jumping Castle Hire Sydney</li>
