--- a/packages/party-packages/balloon-twisting/index.html
+++ b/packages/party-packages/balloon-twisting/index.html
@@ -194,7 +194,7 @@
     <div class="page-title-background d-flex justify-content-center align-items-center flex-column"
         style="background: url('../../../img/topbanner.png');">
         <h1 class="text-center text-white text-uppercase">Balloon Twisting Sydney</h1>
-        <div style="--bs-breadcrumb-divider: '>'; color: #fff;" aria-label="breadcrumb">
+        <div class="breadcrumb-style" aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a class="text-white" href="../../../">Home</a></li>
               <li class="breadcrumb-item active text-white" aria-current="page">Balloon Twisting Sydney</li>
