--- a/index.html
+++ b/index.html
@@ -90,13 +90,12 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="./packages/party-packages/face-painting-hire/">Face
-                                        Painting and Temporary
-                                        Tatto</a></li>
+                                        Painting Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li><a class="dropdown-item" href="./packages/party-packages/balloon-twisting/">Balloon
-                                        Sculpting</a></li>
+                                        Twisting</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -106,7 +105,7 @@
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li><a class="dropdown-item" href="./packages/party-packages/mascot-hire/">Mascot
-                                        Package</a></li>
+                                        Hire</a></li>
                             </ul>
                         </div>
                     </li>
@@ -125,7 +124,7 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="./packages/character-packages/fairy-party-hire/">Fairy
-                                        Package</a></li>
+                                        Party Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -196,7 +195,7 @@
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li><a class="dropdown-item"
-                                        href="./packages/corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
+                                        href="./packages/corporate-packages/jumping-castle-hire/">Jumping Castle Hire</a></li>
                             </ul>
                         </div>
                     </li>
@@ -282,13 +281,13 @@
                                 </h4>
                                 <p class="text-center card-text">
                                     <a class="text-white" href="./packages/party-packages/face-painting-hire/">
-                                        Face Painting & Temporary Tattoo
+                                        Face Painting Hire
                                     </a> <br>
                                     <a class="text-white" href="./packages/party-packages/balloon-twisting/">
                                         Balloon Twisting
                                     </a> <br>
                                     <a class="text-white" href="./packages/party-packages/mascot-hire/">
-                                        Mascot Package
+                                        Mascot Hire
                                     </a> <br>
                                     <a class="text-white" href="./packages/party-packages/henna-tattoo/">
                                         Henna Tattoo
@@ -309,7 +308,7 @@
                                 </h4><br>
                                 <p class="text-center mx-2 card-text">
                                     <a class="text-white" href="./packages/character-packages/fairy-party-hire/">
-                                        Fairy Package
+                                        Fairy Party Hire
                                     </a> <br>
                                     <a class="text-white" href="./packages/character-packages/princess-package/">
                                         Princess Package
@@ -355,7 +354,7 @@
                                 </h4><br>
                                 <p class="text-center mx-2 card-text">
                                     <a class="text-white" href="./packages/corporate-packages/jumping-castle-hire/">
-                                        Jumping Castle
+                                        Jumping Castle Hire
                                     </a> <br>
                                     <a class="text-white" href="./packages/corporate-packages/xmas-events/">
                                         Christmas Events
