--- a/packages/corporate-packages/index.html
+++ b/packages/corporate-packages/index.html
@@ -72,8 +72,7 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="dropdown-item" href="../party-packages/face-painting-hire/">Face Painting and Temporary
-                                        Tatto</a>
+                                    <a class="dropdown-item" href="../party-packages/face-painting-hire/">Face Painting Hire</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider" />
@@ -91,7 +90,7 @@
                                     <hr class="dropdown-divider" />
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="../party-packages/mascot-hire/">Mascot Package</a>
+                                    <a class="dropdown-item" href="../party-packages/mascot-hire/">Mascot Hire</a>
                                 </li>
                             </ul>
                         </div>
@@ -111,7 +110,7 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="dropdown-item" href="../character-packages/fairy-party-hire/">Fairy Package</a>
+                                    <a class="dropdown-item" href="../character-packages/fairy-party-hire/">Fairy Party Hire</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider" />
@@ -192,7 +191,7 @@
                                     <hr class="dropdown-divider" />
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="./jumping-castle-hire/">Jumping Castle</a>
+                                    <a class="dropdown-item" href="./jumping-castle-hire/">Jumping Castle Hire</a>
                             </ul>
                         </div>
                     </li>
@@ -230,7 +229,7 @@
         <h1 class="page-title"><br />Corporate Event Hire</h1>
     </div>
     <div class="container">
-        <p class="pt-5" style="text-align: justify;">We specialize in providing unparalleled corporate event hire services, ensuring that your event is unforgettable with our array of unique entertainment ideas. From family days and school holidays to store openings and seasonal festivities, we cater to a wide range of events, including sports and community gatherings. Our event offerings encompass a multitude of engaging activities such as face painting, balloon twisting, mascot appearances, interactive games, mesmerizing singing and dancing performances, temporary tattoos, enchanting fairy packages, and captivating princess packages featuring beloved characters like Elsa and Anna. Explore our extensive selection of party packages and character options to find the perfect fit for your event. Let us help you create an unforgettable experience for your guests. Contact our corporate event hire team today to turn your vision into a reality.</p>
+        <p class="pt-5" style="text-align: justify;">We specialize in providing unparalleled corporate event hire services, ensuring that your event is unforgettable with our array of unique entertainment ideas. From family days and school holidays to store openings and seasonal festivities, we cater to a wide range of events, including sports and community gatherings. Our event offerings encompass a multitude of engaging activities such as face painting, balloon twisting, mascot appearances, interactive games, mesmerizing singing and dancing performances, temporary tattoos, enchanting Fairy Party Hires, and captivating princess packages featuring beloved characters like Elsa and Anna. Explore our extensive selection of party packages and character options to find the perfect fit for your event. Let us help you create an unforgettable experience for your guests. Contact our corporate event hire team today to turn your vision into a reality.</p>
     </div>
     <div class="container main-body">
         <div class="row">
@@ -299,7 +298,7 @@
                             <a href="./jumping-castle-hire/">
                                 <div class="img-card">
                                     <img src="../../img/jumping_castle.png" alt="Jumping-Castle-img" />
-                                    <div class="img-title">Jumping Castle</div>
+                                    <div class="img-title">Jumping Castle Hire</div>
                                 </div>
                             </a>
                         </div>
