--- a/book-us/index.html
+++ b/book-us/index.html
@@ -69,8 +69,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../packages/party-packages/face-painting-hire/">Face Painting and Temporary
-                                        Tatto</a></li>
+                                <li><a class="dropdown-item" href="../packages/party-packages/face-painting-hire/">Face Painting Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -82,7 +81,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../packages/party-packages/mascot-hire/">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="../packages/party-packages/mascot-hire/">Mascot Hire</a></li>
                             </ul>
                         </div>
                     </li>
@@ -99,7 +98,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../packages/character-packages/fairy-party-hire/">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="../packages/character-packages/fairy-party-hire/">Fairy Party Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -157,7 +156,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../packages/corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
+                                <li><a class="dropdown-item" href="../packages/corporate-packages/jumping-castle-hire/">Jumping Castle Hire</a></li>
                             </ul>
                         </div>
                     </li>
