--- a/gallery/gallery-4/index.html
+++ b/gallery/gallery-4/index.html
@@ -67,8 +67,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../../packages/party-packages/face-painting-hire/">Face Painting and Temporary
-                                        Tatto</a></li>
+                                <li><a class="dropdown-item" href="../../packages/party-packages/face-painting-hire/">Face Painting Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -80,7 +79,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../../packages/party-packages/mascot-hire/">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="../../packages/party-packages/mascot-hire/">Mascot Hire</a></li>
                             </ul>
                         </div>
                     </li>
@@ -97,7 +96,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../../packages/character-packages/fairy-party-hire/">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="../../packages/character-packages/fairy-party-hire/">Fairy Party Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -155,7 +154,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../../packages/corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
+                                <li><a class="dropdown-item" href="../../packages/corporate-packages/jumping-castle-hire/">Jumping Castle Hire</a></li>
                             </ul>
                         </div>
                     </li>
