--- a/packages/character-packages/fairy-party-hire/index.html
+++ b/packages/character-packages/fairy-party-hire/index.html
@@ -70,8 +70,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../../party-packages/face-painting-hire/">Face Painting and Temporary
-                                        Tatto</a></li>
+                                <li><a class="dropdown-item" href="../../party-packages/face-painting-hire/">Face Painting Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -83,7 +82,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../../party-packages/mascot-hire/">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="../../party-packages/mascot-hire/">Mascot Hire</a></li>
                             </ul>
                         </div>
                     </li>
@@ -100,7 +99,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../fairy-party-hire/">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="../fairy-party-hire/">Fairy Party Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -158,7 +157,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../../corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
+                                <li><a class="dropdown-item" href="../../corporate-packages/jumping-castle-hire/">Jumping Castle Hire</a></li>
                             </ul>
                         </div>
                     </li>
@@ -194,7 +193,7 @@
     <div class="page-title-background d-flex justify-content-center align-items-center flex-column"
         style="background: url('../../../img/topbanner.png');">
         <h1 class="text-center text-white text-uppercase">Fairy party hire in Sydney</h1>
-        <div class="breadcrumb-style" aria-label="breadcrumb">
+        <div class="breadcrumb-divider-angle" aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a class="text-white" href="../../../">Home</a></li>
               <li class="breadcrumb-item active text-white" aria-current="page">Fairy party hire in Sydney</li>
@@ -227,16 +226,16 @@
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                             <ul>
-                                <li><a href="../../party-packages/face-painting-hire/">Face Painting & Temporary Tattoo</a></li>
+                                <li><a href="../../party-packages/face-painting-hire/">Face Painting Hire</a></li>
                                 <li><a href="../../party-packages/balloon-twisting/">Balloon Twisting</a></li>
                                 <li><a href="../../party-packages/henna-tattoo/">Hanna Tattoo</a></li>
-                                <li><a href="../../party-packages/mascot-hire/">Mascot Package</a></li>
+                                <li><a href="../../party-packages/mascot-hire/">Mascot Hire</a></li>
                             </ul>
                         </div>
                         <div class="tab-pane fade show active" id="pills-profile" role="tabpanel"
                             aria-labelledby="pills-profile-tab">
                             <ul>
-                                <li><a href="../fairy-party-hire/">Fairy Package</a></li>
+                                <li><a href="../fairy-party-hire/">Fairy Party Hire</a></li>
                                 <li><a href="../princess-package/">Princess Package</a></li>
                                 <li><a href="../pirate-package/">Pirate Package</a></li>
                                 <li><a href="../elsa-or-enna/">Elsa or Anna</a></li>
@@ -252,7 +251,7 @@
                             <ul>
                                 <li><a href="../../corporate-packages/sports-events/">Sports Events</a></li>
                                 <li><a href="../../corporate-packages/xmas-events/">Xmas Events</a></li>
-                                <li><a href="../../corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
+                                <li><a href="../../corporate-packages/jumping-castle-hire/">Jumping Castle Hire</a></li>
                             </ul>
                         </div>
                     </div>
