--- a/packages/character-packages/index.html
+++ b/packages/character-packages/index.html
@@ -70,8 +70,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../party-packages/face-painting-hire/">Face Painting and Temporary
-                                        Tatto</a></li>
+                                <li><a class="dropdown-item" href="../party-packages/face-painting-hire/">Face Painting Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -83,7 +82,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../party-packages/mascot-hire/">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="../party-packages/mascot-hire/">Mascot Hire</a></li>
                             </ul>
                         </div>
                     </li>
@@ -100,7 +99,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./fairy-party-hire/">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="./fairy-party-hire/">Fairy Party Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -158,7 +157,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>                                
+                                <li><a class="dropdown-item" href="../corporate-packages/jumping-castle-hire/">Jumping Castle Hire</a></li>                                
                             </ul>
                         </div>
                     </li>
@@ -261,7 +260,7 @@
                             <a href="./fairy-party-hire/">
                                 <div class="img-card">
                                     <img src="../../img/fairy.png" alt="kidsdream-fairy-Package-img">
-                                    <div class="img-title">Fairy Package</div>
+                                    <div class="img-title">Fairy Party Hire</div>
                                 </div>
                             </a>
                         </div>
