--- a/packages/corporate-packages/jumping-castle-hire/index.html
+++ b/packages/corporate-packages/jumping-castle-hire/index.html
@@ -72,8 +72,7 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="dropdown-item" href="../../party-packages/face-painting-hire/">Face Painting and Temporary
-                                        Tatto</a>
+                                    <a class="dropdown-item" href="../../party-packages/face-painting-hire/">Face Painting Hire</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider" />
@@ -91,7 +90,7 @@
                                     <hr class="dropdown-divider" />
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="../../party-packages/mascot-hire/">Mascot Package</a>
+                                    <a class="dropdown-item" href="../../party-packages/mascot-hire/">Mascot Hire</a>
                                 </li>
                             </ul>
                         </div>
@@ -111,7 +110,7 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="dropdown-item" href="../../character-packages/fairy-party-hire/">Fairy Package</a>
+                                    <a class="dropdown-item" href="../../character-packages/fairy-party-hire/">Fairy Party Hire</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider" />
@@ -192,7 +191,7 @@
                                     <hr class="dropdown-divider" />
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="../jumping-castle-hire/">Jumping Castle</a>
+                                    <a class="dropdown-item" href="../jumping-castle-hire/">Jumping Castle Hire</a>
                             </ul>
                         </div>
                     </li>
@@ -228,7 +227,7 @@
     <div class="page-title-background d-flex justify-content-center align-items-center flex-column"
         style="background: url('../../../img/topbanner.png');">
         <h1 class="text-center text-white text-uppercase">Jumping Castle Hire Sydney</h1>
-        <div class="breadcrumb-style" aria-label="breadcrumb">
+        <div class="breadcrumb-divider-angle" aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a class="text-white" href="../../../">Home</a></li>
               <li class="breadcrumb-item active text-white" aria-current="page">Jumping Castle Hire Sydney</li>
@@ -261,16 +260,16 @@
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                             <ul>
-                                <li><a href="../../party-packages/face-painting-hire/">Face Painting & Temporary Tattoo</a></li>
+                                <li><a href="../../party-packages/face-painting-hire/">Face Painting Hire</a></li>
                                 <li><a href="../../party-packages/balloon-twisting/">Balloon Twisting</a></li>
                                 <li><a href="../../party-packages/henna-tattoo/">Hanna Tattoo</a></li>
-                                <li><a href="../../party-packages/mascot-hire/">Mascot Package</a></li>
+                                <li><a href="../../party-packages/mascot-hire/">Mascot Hire</a></li>
                             </ul>
                         </div>
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel"
                             aria-labelledby="pills-profile-tab">
                             <ul>
-                                <li><a href="../../character-packages/fairy-party-hire/">Fairy Package</a></li>
+                                <li><a href="../../character-packages/fairy-party-hire/">Fairy Party Hire</a></li>
                                 <li><a href="../../character-packages/princess-package/">Princess Package</a></li>
                                 <li><a href="../../character-packages/pirate-package/">Pirate Package</a></li>
                                 <li><a href="../../character-packages/elsa-or-enna/">Elsa or Anna</a></li>
@@ -286,7 +285,7 @@
                             <ul>
                                 <li><a href="../sports-events/">Sports Events</a></li>
                                 <li><a href="../xmas-events/">Xmas Events</a></li>
-                                <li><a href="../jumping-castle-hire/">Jumping Castle</a></li>
+                                <li><a href="../jumping-castle-hire/">Jumping Castle Hire</a></li>
                             </ul>
                         </div>
                     </div>
