--- a/packages/party-packages/index.html
+++ b/packages/party-packages/index.html
@@ -73,8 +73,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./face-painting-hire/">Face Painting and Temporary
-                                        Tatto</a></li>
+                                <li><a class="dropdown-item" href="./face-painting-hire/">Face Painting Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -86,7 +85,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="./mascot-hire/">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="./mascot-hire/">Mascot Hire</a></li>
                             </ul>
                         </div>
                     </li>
@@ -105,7 +104,7 @@
                             </button>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="../character-packages/fairy-party-hire/">Fairy
-                                        Package</a></li>
+                                        Party Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -317,7 +316,7 @@
                                 <div class="img-card">
                                     <img src="../../img/face_paint.png"
                                         alt="kidsdream-face-Painting-Temporary-Tattoo-img">
-                                    <div class="img-title">Face Painting & Temporary Tattoo</div>
+                                    <div class="img-title">Face Painting Hire</div>
                                 </div>
                             </a>
                         </div>
@@ -333,7 +332,7 @@
                             <a href="./mascot-hire/">
                                 <div class="img-card">
                                     <img src="../../img/maskot.jpeg" alt="Mascot-Package-img">
-                                    <div class="img-title">Mascot Package</div>
+                                    <div class="img-title">Mascot Hire</div>
                                 </div>
                             </a>
                         </div>
