--- a/packages/party-packages/mascot-hire/index.html
+++ b/packages/party-packages/mascot-hire/index.html
@@ -69,8 +69,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../face-painting-hire/">Face Painting and Temporary
-                                        Tatto</a></li>
+                                <li><a class="dropdown-item" href="../face-painting-hire/">Face Painting Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -82,7 +81,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../mascot-hire/">Mascot Package</a></li>
+                                <li><a class="dropdown-item" href="../mascot-hire/">Mascot Hire</a></li>
                             </ul>
                         </div>
                     </li>
@@ -99,7 +98,7 @@
                                 <span class="visually-hidden">Toggle Dropdown</span>
                             </button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../../character-packages/fairy-party-hire/">Fairy Package</a></li>
+                                <li><a class="dropdown-item" href="../../character-packages/fairy-party-hire/">Fairy Party Hire</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -157,7 +156,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="../../corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
+                                <li><a class="dropdown-item" href="../../corporate-packages/jumping-castle-hire/">Jumping Castle Hire</a></li>
                             </ul>
                         </div>
                     </li>
@@ -193,7 +192,7 @@
     <div class="page-title-background d-flex justify-content-center align-items-center flex-column"
         style="background: url('../../../../img/topbanner.png');">
         <h1 class="text-center text-white text-uppercase">Mascot Hire Sydney</h1>
-        <div class="breadcrumb-style" aria-label="breadcrumb">
+        <div class="breadcrumb-divider-angle" aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a class="text-white" href="../../../">Home</a></li>
               <li class="breadcrumb-item active text-white" aria-current="page">Mascot Hire Sydney</li>
@@ -227,16 +226,16 @@
                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
                             aria-labelledby="pills-home-tab">
                             <ul>
-                                <li><a href="../face-painting-hire/">Face Painting & Temporary Tattoo</a></li>
+                                <li><a href="../face-painting-hire/">Face Painting Hire</a></li>
                                 <li><a href="../balloon-twisting/">Balloon Twisting</a></li>
                                 <li><a href="../henna-tattoo/">Hanna Tattoo</a></li>
-                                <li><a href="../mascot-hire/">Mascot Package</a></li>
+                                <li><a href="../mascot-hire/">Mascot Hire</a></li>
                             </ul>
                         </div>
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel"
                             aria-labelledby="pills-profile-tab">
                             <ul>
-                                <li><a href="../../character-packages/fairy-party-hire/">Fairy Package</a></li>
+                                <li><a href="../../character-packages/fairy-party-hire/">Fairy Party Hire</a></li>
                                 <li><a href="../../character-packages/princess-package/">Princess Package</a></li>
                                 <li><a href="../../character-packages/pirate-package/">Pirate Package</a></li>
                                 <li><a href="../../character-packages/elsa-or-enna/">Elsa or Anna</a></li>
@@ -252,7 +251,7 @@
                             <ul>
                                 <li><a href="../../corporate-packages/sports-events/">Sports Events</a></li>
                                 <li><a href="../../corporate-packages/xmas-events/">Xmas Events</a></li>
-                                <li><a href="../../corporate-packages/jumping-castle-hire/">Jumping Castle</a></li>
+                                <li><a href="../../corporate-packages/jumping-castle-hire/">Jumping Castle Hire</a></li>
                             </ul>
                         </div>
                     </div>
@@ -381,7 +380,7 @@
                 <a href="../face-painting-hire/">
                     <div class="img-card">
                         <img src="../../../img/face_paint.png" alt="kidsdream-face-Painting-Temporary-Tattoo-img">
-                        <div class="img-title">Face Painting & Temporary Tattoo</div>
+                        <div class="img-title">Face Painting Hire</div>
                     </div>
                 </a>
             </div>
