social media icon & link updated

--- a/packages/character-packages/magician-package/index.html
+++ b/packages/character-packages/magician-package/index.html
@@ -393,14 +393,21 @@
                     <p class="footer-heading">Contact</p>
                     <i class="fa-solid fa-phone" style="color: white;"></i>&nbsp;&nbsp;1300 976 750
                     <br>&nbsp; &nbsp; &nbsp;&nbsp;0433 578 940 <br>
-                    <i class="fa-solid fa-envelope" style="color: white;"></i>&nbsp;&nbsp;info@kidsdream.com.au
+                    <i class="fa-solid fa-envelope text-white"></i>
+<a href="mailto:info@kidsdream.com.au" class="text-white ps-1">  
+info@kidsdream.com.au 
+</a>
                     <br><br><br><br>
 
                     <p class="footer-heading">Social Media</p>
                     <a href="https://www.facebook.com/kidsdreamsydney/" target="_blank"><i
                             class="fa-brands fa-facebook fa-2x" style="color: white;"></i></a> &nbsp; &nbsp;
-                    <i class="fa-brands fa-instagram fa-2x" style="color: white;"></i>
-
+ <a href="https://www.instagram.com/kidsdream_entertainment/" target="_blank">
+                        <i class="fa-brands fa-instagram fa-2x" style="color: white;"></i>
+                    </a> &nbsp; &nbsp;  
+<a href="https://wa.me/message/QVTY3YOLWGWIL1" target="_blank">
+                <i class="fa-brands fa-whatsapp fa-2x" style="color: white"></i>
+            </a>
                 </div>
 
                 <div class="col-lg-4 footer-mid">
